# uvpec

./: .gitignore  MANIFEST.in  README.md  boost_prediction.cpp  boost_prediction.hpp  cython_uvp6.pyx  ecotaxa_IDs.R  features_extraction.cpp  id_classes_ecotaxa.csv  pyproject.toml  setup.py  xgboost_import.cpp
UVP6foo/: .config.yaml.swp  __init__.py  config.yaml  cross_validation.py  extract_features.py  log.py  save_cross_validation.py  save_model.py  train.py  weights.py
UVP6foo/.ipynb_checkpoints/: __main__-checkpoint.py  cross_validation-checkpoint.py  cv_train-checkpoint.py  sample_detritus-checkpoint.py  save_cross_validation-checkpoint.py  save_model-checkpoint.py  train-checkpoint.py  train_model-checkpoint.py  weights-checkpoint.py
src/: cython_uvp6.cpp  features_extraction.hpp  xgboost_import.hpp
test/: config.yaml  objid_threshold_uvp6.tsv  test_UVP6foo.py  test_uvpec.py
uvpec/: __init__.py  __main__.py  clean_detritus.py  config.yaml  configure.py  create_taxoconf.py  cross_validation.py  custom.py  evaluate.py  extract_features.py  kmeans_detritus.py  save_cross_validation.py  save_model.py  weights.py
