# pyproject.toml
  
[build-system]
requires = [
     "setuptools", 
     "Cython",
     "wheel",
     "numpy" # needed because it is used in cython_uvp6.pyx
]
build-backend = "setuptools.build_meta"

[project]
name = "uvpec"
version = "1.0.0"
description = "Underwater Vision Profiler Embedded Classifier"
readme = "README.md"
authors = [{ name = "Florian Ricour", email = "uvpec.5ppdz@aleeas.com" }]
classifiers = [
     'Development Status :: 3 - Alpha',
     'Programming Language :: Python :: 3'
]
requires-python = ">=3.6"
dependencies = [
    'numpy>=1.20.3',
    'pandas>=1.2.1',
    'PyYaml>=5.3.1',
    'scikit-image>=0.18.1',
    'xgboost>=1.3.3',
    'scikit-learn>=1.3.0',
    'pyarrow>=7.0.0',
    'key-generator>=1.0.3',
    'pillow>=8.2.2',
    'matplotlib>=3.3.4',
    'seaborn>=0.11.1'
]

[project.scripts]
uvpec = "uvpec.__main__:main"

[project.urls]
homepage = "https://github.com/ecotaxa/uvpec"

[tool.cibuildwheel] # not absolutely necessary but it's nice to remember of using cibuildwheel to create the manylinux_XX.wheel
before-all = "uname -a"
